# client_bindings

./: Cargo.toml  fix.sh  regen_bindings.sh
src/: bindings.rs  lib.rs
wit/: world.wit
